remove last unused local variables